kube/cluster/echo-api-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: echo-api 
  name: echo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-api
  template:
    metadata:
      labels:
        app: echo-api
    spec:
      containers:
      - image: parix/echo-server
        name: echo-api
        ports:
        - containerPort: 9090
      restartPolicy: Always
