kube/cluster/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.service.type: LoadBalancer
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.network/echonet: "true"
        io.kompose.service: gateway
    spec:
      containers:
      - image: parix/echo-gateway
        imagePullPolicy: ""
        name: echo-gateway
        ports:
        - containerPort: 80
        resources: {}
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
