kube/cluster/server-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - image: parix/echo-server
        name: echo-server
        ports:
        - containerPort: 9090
      restartPolicy: Always
