kube/cluster/echo-api.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: echo-api
  name: echo-api
spec:
  ports:
  - name: rpc
    port: 9090
    targetPort: 9090
  selector:
    app: echo-api
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: echo-api 
  name: echo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-api
  template:
    metadata:
      labels:
        app: echo-api
    spec:
      containers:
      - image: parix/echo-server
        name: echo-api
        ports:
        - containerPort: 9090
      restartPolicy: Always
