kube/cluster/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  ports:
  - name: "8000"
    port: 8000
    targetPort: 80
  selector:
    io.kompose.service: gateway
  type: LoadBalancer
status:
  loadBalancer: {}
