kube/cluster/server-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: server
  name: server
spec:
  ports:
  - name: rpc
    port: 9090
    targetPort: 9090
  selector:
    app: server
