kube/cluster/echo-api-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: echo-api-access
spec:
  podSelector:
    matchLabels:
      app: echo-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          echo-api-access: allow
